objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yeah</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Heck yeah</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Angela_test__c</fullName>
        <label>Angela_test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B&amp;B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeletingPicklistTest__c</fullName>
        <label>DeletingPicklistTest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nicole</fullName>
                </value>
                <value>
                    <fullName>Chris</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                    <isActive>false</isActive>
                    <label>Charlotte</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DemoMay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DemoMay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_10_13__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you like Salesforce?</description>
        <label>Demo 10:13</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_9_27__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are you watching this demo?</description>
        <label>Demo-9:27</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DestructiveGlobalTest__c</fullName>
        <label>DestructiveGlobalTest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VincenzoDelete</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountPercentage__c</fullName>
        <description>Demo June</description>
        <formula>DiscountRate__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DiscountPercentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountRate__c</fullName>
        <description>Demo June</description>
        <label>DiscountRate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Git_demo__c</fullName>
        <complianceGroup>HIPAA</complianceGroup>
        <description>Git demo CI for Jason. Edited.</description>
        <label>Git demo</label>
        <precision>11</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JuneDemo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom field permissions</description>
        <label>JuneDemo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                    <color>#F3D904</color>
                    <label>Gold</label>
                </value>
                <value>
                    <fullName>Silver</fullName>
                    <color>#BBBBBB</color>
                    <label>Silver</label>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                    <color>#9999FF</color>
                    <label>Platinum</label>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <color>#A53711</color>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesDemoField__c</fullName>
        <description>This is my new sales demo field</description>
        <label>SalesDemoField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SueTest__c</fullName>
        <label>SueTest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sheik2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Channel_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Channel Customers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Account</fullName>
        <active>true</active>
        <label>Customer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flores</fullName>
        <active>true</active>
        <label>Flores</label>
    </recordTypes>
    <recordTypes>
        <fullName>Olga2</fullName>
        <active>true</active>
        <label>Olga2</label>
    </recordTypes>
    <recordTypes>
        <fullName>OlgaTest</fullName>
        <active>true</active>
        <description>To test active</description>
        <label>OlgaTest</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>